action-alert-windowhandle

--- a/configurations.properties
+++ b/configurations.properties
@@ -1,4 +1,4 @@
 browser=chrome
-projectUrl=https://www.google.com
+projectUrl=https://the-internet.herokuapp.com/context_menu
 username=kullaniciAdi
 password=password
