--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
         <!-- Aşağıdaki 3 dependecy API testlerinde kullanmak için gereklidir-->
         <dependency>
             <groupId>io.rest-assured</groupId>
